Moved MimeTypeMap to static for performance

--- a/readme.textile
+++ b/readme.textile
@@ -7,8 +7,9 @@ and tablets.
 
 *Currently Android HTTP Server is in an early state of development and should not be considered ready for "prime time"*.
 However, as it currently stands it is able to stand-up to fairly vigorous multi-threaded benchmarking.  Early testing
-using JMeter indicates that when running on a standard HTC Wildfire (533MHz) device running Android 2.2 it can serve
-a test page at approximately 300 requests/s when debugging and approximately 1500 requests/s when not debugging.
+using JMeter indicates that when running on a standard HTC Wildfire (Single-core MSM7225 528MHz) device running 
+Android 2.2.1 it can serve a small test page at approximately 450 requests/s when debugging and approximately 1800 
+requests/s when not debugging (based on 10 simultaneous JMeter threads - please check Test Plan.jmx for exact settings).  
 
 h2. License
 
