--- a/readme.textile
+++ b/readme.textile
@@ -8,8 +8,8 @@ and tablets.
 *Currently Android HTTP Server is in an early state of development and should not be considered ready for "prime time"*.
 However, as it currently stands it is able to stand-up to fairly vigorous multi-threaded benchmarking.  Early testing
 using JMeter indicates that when running on a standard HTC Wildfire (Single-core MSM7225 528MHz) device running 
-Android 2.2.1 it can serve a small test page at approximately 450 requests/s when debugging and approximately 1800 
-requests/s when not debugging (based on 10 simultaneous JMeter threads - please check Test Plan.jmx for exact settings).  
+Android 2.2.1 it can serve a small test page at approximately 750 requests/min when debugging and approximately 2200 
+requests/min when not debugging (based on 10 simultaneous JMeter threads - please check Test Plan.jmx for exact settings).  
 
 h2. License
 
