Updated the GUI to control the server, updated server-stop logic

--- a/readme.textile
+++ b/readme.textile
@@ -11,6 +11,10 @@ using JMeter indicates that when running on a standard HTC Wildfire (Single-core
 Android 2.2.1 it can serve a small test page at approximately 750 requests/min when debugging and approximately 2200 
 requests/min when not debugging (based on 10 simultaneous JMeter threads - please check Test Plan.jmx for exact settings).  
 
+h2. Sources
+
+Uses icons from the Tango Project (http://tango-project.org/) which have been placed in the public domain.
+
 h2. License
 
 MIT
