--- a/readme.textile
+++ b/readme.textile
@@ -2,7 +2,7 @@ h1. Android HTTP Server
 
 _Multi-threaded HTTP server library for Android devices_
 
-AndroidHTTPServer is a multi-threaded HTTP web server library for Android devices, including smart phones and tablets.  It is designed to be "dropped-in" to new or existing apps to rapidly add HTTP handling capabilities, and offers a flexible plugin architecture to allow apps to create their own custom HTTP serving capabilities - for example processing custom file types or handling unique programmatic responses to such as reading the device's sensors and responding with something interesting.
+AndroidHTTPServer is a multi-threaded HTTP web server library for Android devices, including smart phones and tablets.  It is designed to be "dropped-in" to new or existing apps to rapidly add HTTP handling capabilities, and offers a flexible plugin architecture to allow apps to create their own custom HTTP serving capabilities - for example processing custom file types or handling unique programmatic responses such as reading the device's GPS or accelerometer sensors and responding with something interesting.
 
 Currently there are two parts of the AndroidHTTPServer project - the library project itself and the GUI project.  The library project is a standard Android Library project which can be included in normal Android apps.  The GUI project is an example of a normal Android app utilising the Android HTTP Server library, and demonstrates how to control the server via on-screen buttons etc.
 
